--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <title>HTML Links</title>
 </head>
 <body>
+<a href="https://bbc.co.uk" 
+target="_blank">BBC</a>
+<a href="about.html">About</a>
 
   <!-- Challenge 1: Wrap the text below with a link that has an absolute path -->
   Absolute Path (external link)
@@ -14,7 +17,9 @@
   Relative Path (internal link)
 
   <!-- Challenge 3: Wrap the img tag below with a link that uses the target attribute -->
-  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="a lion">
+  <a 
+  href="https://www.bbc.co.uk" target="_blank"><img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="a lion"></a>
+
 
 </body>
 </html>
