--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
   <!-- Challenge 3: Wrap the img tag below with a link that uses the target attribute -->
   <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="a lion">
+  <a href="https://flatironschool.com/campuses/london/" target="blank"> flatiron</a>
 
 </body>
 </html>
